--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snoo"
 version = "0.1.0"
-authors = ["Seth Lopez <seth@dynamit.com>"]
+authors = ["Seth Lopez <seth@sethlopez.me>"]
 
 [dependencies]
