--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 authors = ["Seth Lopez <seth@sethlopez.me>"]
 
 [dependencies]
+failure = "0.1"
+failure_derive = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+serde_urlencoded = "0.5"
