Complete authentication functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ authors = ["Seth Lopez <seth@sethlopez.me>"]
 failure = "0.1"
 failure_derive = "0.1"
 futures = "0.1"
-reqwest = { version = "0.8", features = ["unstable"] }
+hyper = "0.11"
+hyper-tls = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde_urlencoded = "0.5"
+tokio-core = "0.1"
