--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 serde_urlencoded = "0.5"
 tokio-core = "0.1"
+
+[dev-dependencies]
+structopt = "0.1"
+structopt-derive = "0.1"
